# timetracker

./: .dockerignore  .drone.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Caddyfile  Caddyfile.dev  Dockerfile  Makefile  README.md  _add_search.py  _cf.py  devcontainer.Dockerfile  docker-compose.no-caddy.yml  docker-compose.yml  entrypoint.sh  fly.staging.toml  input.css  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  settings.ini.example  shell.nix  streak_bruteforce.py  supervisor.conf  tailwind.config.js  tsconfig.check.json  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.gitea/workflows/: build-docker.yml  build.yml  staging.yml
.githooks/: pre-commit
.github/workflows/: build-docker.yml  staging.yml
.superpowers/sdd/: final-cleanup-report.md  task-1-report.md
api/: schema.py
common/: COMPONENT_IMPROVEMENTS.md  apca.py  components.py  criteria.py  date_time_presentation.py  http.py  icons.py  import_data.py  input.css  layout.py  middleware.py  plots.py  sorting.py  storage.py  time.py  utils.py
common/components/: __init__.py  core.py  custom_elements.py  date_range_picker.py  domain.py  filters.py  icons_generated.py  theme.py  (+5 more)
docs/: STATUSES.md  configuration.md  custom-element-api.md  dropdown-lifecycle-events.md  filter-forge-prototype-case-study.md  form-overhaul.md  qui-filter-builder-case-study.md  settings-mobile-bottom-sheet-plan.md  settings-panel-epic.md  settings-sticky-rail-plan.md  settings-ui-kit.md  visual-conventions.md
e2e/: conftest.py  test_admin_settings_page_e2e.py  test_api_csrf_e2e.py  test_boolean_filter_e2e.py  test_control_sizing_e2e.py  test_cross_entity_filter_e2e.py  test_custom_elements_e2e.py  test_date_filter_e2e.py  test_date_range_picker_e2e.py  test_device_clear_e2e.py  test_dropdown_clipping_e2e.py  test_field_comparison_e2e.py  test_filter_builder_e2e.py  test_filter_count_e2e.py  test_global_error_handler_e2e.py  test_number_filter_e2e.py  test_played_dropdown_e2e.py  test_purchase_e2e.py  test_quick_filter_e2e.py  test_range_slider_e2e.py  test_search_filter_e2e.py  test_search_select_e2e.py  test_session_finish_e2e.py  test_session_inplace_swap_e2e.py  test_session_reset_e2e.py  test_set_filter_e2e.py  test_settings_page_e2e.py  test_settings_ui_kit_e2e.py  test_string_filter_e2e.py  test_teardown_quiescence_e2e.py  test_theme_e2e.py  test_touch_targets_e2e.py  test_truncated_text_e2e.py  test_widgets_e2e.py
frontend/: .eslintrc.cjs  .prettierrc  index.html  package.json  tailwind.config.cjs  vite.config.js
games/: admin.py  api.py  apps.py  dev_login.py  deviceviews.py  editionviews.py  filters.py  formatting.py  forms.py  gameviews.py  htmx_middleware.py  models.py  platformviews.py  purchaseviews.py  schema.py  sessionviews.py  signals.py  sorting.py  tasks.py  tests.py  urls.py  views.py
scripts/: bootstrap-cloud-env.sh  contrast_audit.py  print_local_time.py
src/: input.css
tests/: conftest.py  test_admin_removed.py  test_admin_settings_page.py  test_anonymize_sample.py  test_apca.py  test_api.py  test_client_error_api.py  test_color_tokens.py  test_components.py  test_config.py  test_control_height.py  test_custom_elements.py  test_date_range_picker.py  test_date_time_presentation.py  test_date_time_rendering_paths.py  test_datetime_local_presentation.py  test_dev_login.py  test_field_widget.py  test_filter_bar_labels.py  test_filter_bars.py  test_filter_builder_page.py  test_filter_cross_entity.py  test_filter_helpers.py  test_filter_paths.py  test_filter_presets.py  test_filter_tokens_contract.py  test_filter_tree_contract.py  test_filter_url.py  test_filter_where.py  test_filter_widgets.py  test_filters.py  test_game_detail_links.py  test_graphql.py  test_hashed_static.py  test_html_validity.py  test_loadplatforms.py  test_middleware_integration.py  test_migration_sentinel_removal.py  test_navbar_log_button.py  test_navbar_playtime.py  (+44 more)
timetracker/: config.py  settings.py  settings_commands.py  settings_registry.py  settings_resolver.py  theme.py  urls.py
ts/: add_game.ts  add_purchase.ts  client-errors.test.ts  client-errors.ts  csrf.ts  date-time-presentation.test.ts  date-time-presentation.ts  date_range_picker.ts  filter_bar.ts  global-error-handler.test.ts  global-error-handler.ts  globals.d.ts  htmx-redirect-toast.ts  range_slider.ts  search_select.ts  session-row.test.ts  session-row.ts  settings-events.ts  settings-reload.ts  theme-bootstrap.test.ts  theme-bootstrap.ts  theme-coordinator.test.ts  theme-coordinator.ts  toast.test.ts  toast.ts  utils.ts  year_picker.ts
(+480 files in other folders)
