[tool.poetry]
name = "timetracker"
version = "1.5.2"
description = "A simple time tracker."
authors = ["Lukáš Kucharczyk <lukas@kucharczyk.xyz>"]
license = "GPL"
readme = "README.md"
packages = [{include = "timetracker"}]

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
django-extensions = "^3.2.3"
djhtml = "^3.0.6"
djlint = "^1.34.1"
isort = "^5.13.2"
pre-commit = "^3.7.1"
django-debug-toolbar = "^4.4.2"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
graphene-django = "^3.2.0"
django-htmx = "^1.18.0"
django-template-partials = "^24.2"
markdown = "^3.6"
django-cotton = "^1.2.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timetracker-import = "common.import_data:import_from_file"
